<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:title="@string/pref_nextscreen"
        android:summary="@string/pref_nextscreen_summary">

        <!-- You can place more preferences here that will be shown on the next screen. -->
        <CheckBoxPreference
            android:key="next_screen_checkbox_preference"
            android:title="@string/pref_title_next_screen_toggle_preference"
            android:summary="@string/pref_summary_next_screen_toggle_preference">
        </CheckBoxPreference>
    </PreferenceScreen>


    <PreferenceCategory android:title="@string/settings_separator_title" >
        <SwitchPreference
            android:defaultValue="false"
            android:key="rangeXCheckBox"
            android:title="@string/x_range_title" >
        </SwitchPreference>

        <ListPreference
            android:key="listOfXRange"
            android:entries="@array/rangeX"
            android:entryValues="@array/rangeXValues"
            android:defaultValue="3"
            android:dependency="rangeXCheckBox"
            android:summary="%s"
            android:title="@string/x_large_list_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="rangeYCheckBox"
            android:title="@string/y_range_title" >
        </SwitchPreference>

        <ListPreference
            android:key="listOfYRange"
            android:entries="@array/rangeY"
            android:entryValues="@array/rangeYValues"
            android:defaultValue="3"
            android:dependency="rangeYCheckBox"
            android:summary="%s"
            android:title="@string/y_large_list_title" />
    </PreferenceCategory>

</PreferenceScreen>